--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tv_program_guide-norigin-jan23",
-  "version": "0.1.0",
-  "private": true,
+  "name": "create-react-mock-epg",
+  "version": "1.0.0",
+  "bin": "./bin/cli.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "start:mock-api": "./node_modules/.bin/osprey-mock-service -f ./node_modules/nm-mock-api/demo.raml -p 1337 --cors",
-    "start:configured-api": "node ./node_modules/nm-mock-api/scripts/updateEpg.js && npm run start:mock-api",
+    "start:configured-api": "node ./node_modules/nm-mock-api/scripts/updateEpg.js && npm run start:mock-api -d",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
