--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "cors": "^2.8.5",
     "nm-mock-api": "git+https://github.com/NoriginMedia/mock-api.git#cloudberry",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -19,8 +20,8 @@
   },
   "scripts": {
     "start:mock-api": "./node_modules/.bin/osprey-mock-service -f ./node_modules/nm-mock-api/demo.raml -p 1337 --cors",
-    "prestart": "node ./node_modules/nm-mock-api/scripts/updateEpg.js && npm run start:mock-api&",
-    "start": "react-scripts start",
+    "notstart": "node ./node_modules/nm-mock-api/scripts/updateEpg.js && npm run start:mock-api&",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
