--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "cors": "^2.8.5",
-    "moment": "^2.29.4",
     "nm-mock-api": "git+https://github.com/NoriginMedia/mock-api.git#cloudberry",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,7 +21,7 @@
   "scripts": {
     "start:mock-api": "./node_modules/.bin/osprey-mock-service -f ./node_modules/nm-mock-api/demo.raml -p 1337 --cors",
     "notstart": "node ./node_modules/nm-mock-api/scripts/updateEpg.js && npm run start:mock-api&",
-    "start": "node ./api/index.js",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
